--- a/程式語言理論/程式語言的分類.md
+++ b/程式語言理論/程式語言的分類.md
@@ -55,3 +55,5 @@ x = "A";  // Type 'string' is not assignable to type 'number'.
 # Class-based 與 Prototype-based
 
 #TODO 
+
+**參考資料｜**https://openhome.cc/Gossip/Programmer/ClassPrototypeBased.html
