--- a/網頁開發/後端/Django (Python)/如何開始一個專案.md
+++ b/網頁開發/後端/Django (Python)/如何開始一個專案.md
@@ -1,28 +1,24 @@
 # 安裝 Django
 
----
-
-#### 安裝最新版本
+### 安裝最新版本
 
 ```sh
 python3 -m pip install Django
 ```
 
-#### 已有舊版本，將其更新至最新版
+### 已有舊版本，將其更新至最新版
 
 ```sh
 python3 -m pip install -U Django
 ```
 
-#### 確認版本
+### 確認版本
 
 ```sh
 python3 -m django --version
 ```
 
 # 建立一個新專案
-
----
 
 ```sh
 django-admin startproject <project-name>
