--- a/資料庫/MongoDB/安裝與啟用.md
+++ b/資料庫/MongoDB/安裝與啟用.md
@@ -1,20 +1,20 @@
-#### 安裝
+### 安裝
 
 請參考 [官方網站](https://www.mongodb.com/docs/manual/installation/)
 
-#### 啟動本機的 MongoDB Server
+### 啟動本機的 MongoDB Server
 
 ```sh
 brew services start mongodb-community@6.0
 ```
 
-#### 關閉本機的 MongoDB Server
+### 關閉本機的 MongoDB Server
 
 ```sh
 brew services stop mongodb-community@6.0
 ```
 
-#### 連線 MongoDB
+### 連線 MongoDB
 
 ```sh
 mongosh
