--- a/資料庫/PostgreSQL/零碎筆記.md
+++ b/資料庫/PostgreSQL/零碎筆記.md
@@ -1,4 +1,4 @@
-## 整數相除如何得到完整（包括小數）的結果
+### 整數相除如何得到完整（包括小數）的結果
 
 須先將分母或分子至少一個化為浮點數。
 
@@ -16,35 +16,55 @@ select count(distinct gender)::float/count(1) from user;
 
 ---
 
-## 比起 MySQL，PostgreSQL 更貼近 SQL Standard
+### 比起 MySQL，PostgreSQL 更貼近 SQL Standard
 
 ---
 
-## GUI: pg admin
+### GUI: pg admin
 
 ---
 
-## Database, Table, Column 名稱不要用大寫
+### 名稱不要用大寫 (camelCase 也不要)
 
-1. Database name 不要用大寫 (camelCase 也不要)，若由多單字組成，應以 `_` 連接之
-2. Table name 不要用大寫，否則須下 `<schema_name>."<table_name>"` 才能找到該 table
-3. Column name 不要用大寫，否則須下 `<tableName>."<columnName>"` 才能 select 到該 column
+若名稱由多單字組成，應全小寫並以 `_` 連接之。
+
+1. Database name 不要用大寫
+2. Schema name 不要用大寫
+3. Table name 不要用大寫，否則須下 `<schema_name>."<table_name>"` 才能找到該 table
+4. Column name 不要用大寫，否則須下 `<tableName>."<columnName>"` 才能 select 到該 column
 
 ---
 
-## 註解
+### 註解
 
 ```postgresql
 -- 單行註解
 
 /*
-多行註解
+多
+行
+註
+解
 */
 ```
 
 ---
 
-## `TRUNCATE` vs. `DELETE`
+### 關鍵字的順序
+
+`SELECT` ... (欄位)
+
+`FROM` ... (表)
+
+`WHERE` ... (comparison of values in target table fields)
+
+`ORDER BY` / `GROUP BY` ... (欄位)
+
+`HAVING` ... (comparison of the results of aggregate functions)
+
+---
+
+### `TRUNCATE` vs. `DELETE`
 
 `TRUNCATE <table_name>` 的效果等同於 `DELETE FROM <table_name>`，都是將指定表內的所有資料刪除（但不刪除 table 的 schema）。
 
@@ -52,7 +72,7 @@ select count(distinct gender)::float/count(1) from user;
 
 ---
 
-## `CHAR(n)` vs. `VARCHAR(n)` vs. `TEXT`
+### `CHAR(n)` vs. `VARCHAR(n)` vs. `TEXT`
 
 | **Character Types** | **Description** |
 |----|----|
@@ -62,13 +82,13 @@ select count(distinct gender)::float/count(1) from user;
 
 ---
 
-## `LIMIT`
+### `LIMIT`
 
 `FETCH FIRST n ROWS ONLY` 在 PostgreSQL 可以簡寫為 `LIMIT n`。
 
 ---
 
-## 自定義資料型態
+### 自定義資料型態
 
 舉例：
 
@@ -85,7 +105,7 @@ ALTER COLUMN gender TYPE gender_type USING gender::gender_type;
 
 ---
 
-## `DISTINCT`
+### `DISTINCT`
 
 ```PostgreSQL
 SELECT DISTINCT [column_a], [column_b], ... FROM [table_a];
@@ -107,7 +127,7 @@ FROM (SELECT DISTINCT country, city FROM customers) AS subtable;
 
 ---
 
-## String 在不同 SQL 語言中的差別
+### String 在不同 SQL 語言中的差別
 
 | **語言** | **字串比對 (column value)** | **引號** |
 | ---- | ---- | ---- |
@@ -116,7 +136,7 @@ FROM (SELECT DISTINCT country, city FROM customers) AS subtable;
 
 ---
 
-## 選取最大值的方法
+### 選取最大值的方法
 
 範例資料：
 
@@ -168,33 +188,19 @@ Output:
 
 ---
 
-## Wildcard
+### Wildcard
 
 字串比對時，`%` 代表萬用字元（任意長度、任意字元），`_` 則代表長度為 1 的任意字元。
 
 ---
 
-## 關鍵字的順序
-
-`SELECT` ... (欄位)
-
-`FROM` ... (表)
-
-`WHERE` ... (comparison of values in target table fields)
-
-`ORDER BY` / `GROUP BY` ... (欄位)
-
-`HAVING` ... (comparison of the results of aggregate functions)
-
----
-
-## 判斷是否為 `null`
+### 判斷是否為 `null`
 
 在 PostgreSQL 中，欲判斷某欄位是否為 `null` 時，正確的方式是 `WHERE xxx IS NULL` 或 `WHERE xxx IS NOT NULL`，不能使用 `= NULL` 或 `<> NULL` 來判斷。
 
 ---
 
-## `IN`
+### `IN`
 
 當使用 `IN` operator 時，若左方為 `null`，則無論右方有哪些值，一律 return `null`；或者，若右方的沒有出現任何與左方相同的值，而且有出現過 `null`，則也是 return `null`，不是 return `false`。同樣的規則也適用於 `NOT IN`。
 
