--- a/資料結構與演算法/最大公因數與最小公倍數.md
+++ b/資料結構與演算法/最大公因數與最小公倍數.md
@@ -1,7 +1,5 @@
 # Intuitive Approach
 
----
-
 計算最小公因數最直覺的方法，便是從 2 開始往上探索有哪個數字可以同時整除給定的兩數，探索到兩數中較小者為止，屆時若尚未找到，則 return 1，範例程式碼如下：
 
 ```Python
@@ -17,9 +15,9 @@ def gcd_intuitive(a: int, b: int) -> int:
 	return 1
 ```
 
-**Time Complexity:** O(min(a, b))
+**Time Complexity:** $O(min(a, b))$
 
-類似地道理，若要以最直覺的方式尋找最小公倍數，那就是從給定兩數中較大者開始往上探索有哪個數字可以同時被給定的兩數整除，範例程式碼如下：
+類似地，若要以最直覺的方式尋找最小公倍數，那就是從給定兩數中較大者開始往上探索有哪個數字可以同時被給定的兩數整除，範例程式碼如下：
 
 ```Python
 def lcm_intuitive(a: int, b: int) -> int:
@@ -31,15 +29,13 @@ def lcm_intuitive(a: int, b: int) -> int:
 		ans += 1
 ```
 
-**Time Complexity:** O(a*b)
+**Time Complexity:** $O(a*b)$
 
 那有沒有更有效率的演算法呢？答案是肯定的，而且這個方法其實大多數人或許國小就會了，他就是「輾轉相除法」。
 
 # Euclidean Approach
 
----
-
-一樣從 gcd 開始：
+讓我們一樣從 gcd 開始：
 
 ```Python
 def gcd_euclidean(a: int, b: int) -> int:
@@ -48,7 +44,7 @@ def gcd_euclidean(a: int, b: int) -> int:
 	return gcd_euclidean(b % a, a)
 ```
 
-**Time Complexity:** O(log(min(a, b)))
+**Time Complexity:** $O(log(min(a, b)))$
 
 接著輪到 lcm，此時我們需要用到一個國中數學課的概念：
 
@@ -63,4 +59,4 @@ def lcm_euclidean(a: int, b: int) -> int:
 	return (a * b) // gcd_euclidean(a, b)
 ```
 
-**Time Complexity:** O(log(min(a, b)))
+**Time Complexity:** $O(log(min(a, b)))$
