--- a/資料庫/MongoDB/常用指令.md
+++ b/資料庫/MongoDB/常用指令.md
@@ -1,16 +1,16 @@
-#### 查看所有 Databases
+### 查看所有 Databases
 
 ```mongosh
 show dbs
 ```
 
-#### 切換 Database
+### 切換 Database
 
 ```sh
 use <database_name>
 ```
 
-#### 查看所有 Collections
+### 查看所有 Collections
 
 >在 MongoDB 中，collection 取代了 SQL 中 table 的角色。
 
@@ -18,13 +18,13 @@ use <database_name>
 show collections
 ```
 
-#### 選擇指定 Collection 中的所有資料
+### 選擇指定 Collection 中的所有資料
 
 ```mongosh
 db.<collection_name>.find()
 ```
 
-#### 刪除指定 Collection
+### 刪除指定 Collection
 
 ```mongosh
 db.<collection_name>.drop()
