--- a/網頁開發/後端/Django (Python)/如何開始一個專案.md
+++ b/網頁開發/後端/Django (Python)/如何開始一個專案.md
@@ -2,24 +2,24 @@
 
 ### 安裝最新版本
 
-```sh
+```bash
 python3 -m pip install Django
 ```
 
 ### 已有舊版本，將其更新至最新版
 
-```sh
+```bash
 python3 -m pip install -U Django
 ```
 
 ### 確認版本
 
-```sh
+```bash
 python3 -m django --version
 ```
 
 # 建立一個新專案
 
-```sh
+```bash
 django-admin startproject <project-name>
 ```
