--- a/資料庫/MongoDB/安裝與啟用.md
+++ b/資料庫/MongoDB/安裝與啟用.md
@@ -4,19 +4,19 @@
 
 ### 啟動本機的 MongoDB Server
 
-```sh
+```bash
 brew services start mongodb-community@6.0
 ```
 
 ### 關閉本機的 MongoDB Server
 
-```sh
+```bash
 brew services stop mongodb-community@6.0
 ```
 
 ### 連線 MongoDB
 
-```sh
+```bash
 mongosh
 
 # or
