--- a/資料庫/PostgreSQL/安裝與啟用.md
+++ b/資料庫/PostgreSQL/安裝與啟用.md
@@ -1,28 +1,28 @@
-## 安裝
+### 安裝
 
-#TODO 
+#TODO
 
 ---
 
-## 啟動本機的 PostgreSQL Server (on MacOS)
+### 啟動本機的 PostgreSQL Server (on MacOS)
 
-```sh
+```bash
 sudo service postgresql start
 ```
 
 ---
 
-## 關閉本機的 PostgreSQL Server (on MacOS)
+### 關閉本機的 PostgreSQL Server (on MacOS)
 
-```sh
+```bash
 sudo service postgresql stop
 ```
 
 ---
 
-## 連線 PostgreSQL
+### 連線 PostgreSQL
 
-```sh
+```bash
 psql
 
 # or
