--- a/資料庫/PostgreSQL/零碎筆記.md
+++ b/資料庫/PostgreSQL/零碎筆記.md
@@ -4,13 +4,13 @@
 
 ##### 法一：加 `.0`
 
-```postgresql
+```PostgreSQL
 select 2.0/5;
 ```
 
 ##### 法二：加 `::float`
 
-```postgresql
+```PostgreSQL
 select count(distinct gender)::float/count(1) from user;
 ```
 
@@ -37,7 +37,7 @@ select count(distinct gender)::float/count(1) from user;
 
 ### 註解
 
-```postgresql
+```PostgreSQL
 -- 單行註解
 
 /*
@@ -92,13 +92,13 @@ select count(distinct gender)::float/count(1) from user;
 
 舉例：
 
-```postgresql
+```PostgreSQL
 CREATE TYPE gender_type AS ENUM ('M', 'F');
 ```
 
 將 column `gender` 的資料型態改成自定義的型態 `gender_type`：
 
-```postgresql
+```PostgreSQL
 ALTER TABLE customer
 ALTER COLUMN gender TYPE gender_type USING gender::gender_type;
 ```
