--- a/Python/零碎筆記.md
+++ b/Python/零碎筆記.md
@@ -32,6 +32,39 @@ if (l := len(s)) > 2:
 
 ---
 
+### 註解
+
+```Python
+# 這是單行註解
+
+"""
+這是
+多行
+註解
+"""
+```
+
+---
+
+### 無限
+
+法一
+
+```Python
+float("inf") # 正無限大
+float("-inf") # 負無限大
+```
+
+法二
+
+```Python
+import math
+math.inf # 正無限大
+-math.inf # 負無限大
+```
+
+---
+
 ### 充分利用 [[Lazy evaluation]] 的特性，從而避免不必要的計算
 
 ---
