--- a/Python/小技巧.md
+++ b/Python/小技巧.md
@@ -50,6 +50,8 @@ b = temp
 
 ### List Comprehension
 
+^4c3cef
+
 ```python
 l = [i ** 2 for i in range(10)]
 
@@ -113,4 +115,18 @@ if k in aDict:
     aDict[k] += 1
 else:
     aDict[k] = 1
+```
+
+---
+
+### 對 Dict 做字串格式化
+
+```Python
+info = {
+    "firstName": "Bob",
+    "lastName": "Douglas",
+    "age": 25
+}
+
+greeting = "My name is %(firsName)S %(lastName)S, I'm %(age)S years old." % info
 ```
