--- a/Database/MongoDB/安裝與啟用.md
+++ b/Database/MongoDB/安裝與啟用.md
@@ -5,6 +5,7 @@
 ### 啟動本機的 MongoDB Server
 
 ```bash
+# Start as a MacOS service
 brew services start mongodb-community@6.0
 ```
 
@@ -14,12 +15,4 @@ brew services start mongodb-community@6.0
 brew services stop mongodb-community@6.0
 ```
 
-### 連線 MongoDB
-
-```bash
-mongosh
-
-# or
-
-mongosh <db_name>
-```
+### [[Mongosh#^444754|連線 MongoDB]]
