--- a/Pinkoi/本機環境部署筆記.md
+++ b/Pinkoi/本機環境部署筆記.md
@@ -1,48 +1,10 @@
 [公司文件](https://paper.dropbox.com/doc/Local--B0hjMBBBDMGyiNg4whzC4VkFAg-ggNEv2b1mB2c9dcb6YjHF)
 
-### Containers for Local API Server
+# VS Code Dev Container
 
-**無 Terminal**
+使用本機的 VS Code 打開 pinkoi repo 會因為有許多 Python 套件與 VS Code 外掛沒有安裝在本機，而導致程式碼中充滿各種顏色的（提示錯誤用的）底線，此時可以使用打包好的 Docker Container 建立一個專門用來開發 pinkoi repo 的 VS Code 環境，步驟如下：
 
-- 法一
-
-    ```bash
-    # cd 至 pinkoi repo
-    
-    # 啟動
-    make local-up
-    
-    # 關閉
-    make local-down
-    ```
-
-- 法二
-
-    ```bash
-    # cd 至 pinkoi repo
-    
-    # 啟動
-    make web-start
-    
-    # 關閉：至 Docker Desktop UI 關閉 container
-    ```
-
-**有 Terminal**
-
-```bash
-# cd 至 pinkoi repo
-
-# 啟動
-make web-debug
-
-# control + c 關閉
-```
-
----
-
-### Container for VS Code
-
-**Step1: 產生 `marketplace-local-vscode` repo**
+### Step1: 產生 `marketplace-local-vscode` repo
 
 ```bash
 # cd 至 pinkoi repo
@@ -50,23 +12,26 @@ make web-debug
 make vscode-local-env
 ```
 
-**Step2: Build Container**
+此時會在與 pinkoi repo 同層的位置出現一個新的 repo，名為 `marketplace-local-vscode`。
 
-- Step2-1: 使用 VS code 開啟 `marketplace-local-vscode` rep（會與 `pinkoi` repo 在同一層）
+### Step2: Configure Container
 
-- Step2-2: 為避免 API Server Container 使用的 port 與 VS Code Container 使用的 port 相撞，須更改 VS Code Container 的 port
+- Step2-1: 使用 VS code 開啟 `marketplace-local-vscode` repo
+
+- Step2-2: 為避免 API Server Container (`web-debug`) 使用的 port 與 VS Code Dev Container 使用的 port 相撞（都是 443），須更改 VS Code Dev Container 的 port，首先要在 `marketplace-local-vscode/.devcontainer` 下找到 `devcontainer.json` 這個檔案，然後找到下面這段：
 
     ```json
-    // 在 marketplace-local-vscode/.devcontainer 下找到 devcontainer.json
-    // 然後找到下面這段
     "runArgs": [
         "-e",
         "HOST_OS=Darwin",
         "-p",
         "127.0.0.1:443:8080"
     ],
-    
-    // 把它改成
+    ```
+
+    把它改成：
+
+    ```json
     "runArgs": [
         "-e",
         "HOST_OS=Darwin",
@@ -75,13 +40,13 @@ make vscode-local-env
     ]
     ```
 
-- Step3: `cmd` + `shift` + `P` 開啟 VS code 指令介面
+### Step3: Build Container
 
-- Step4: 輸入 `Rebuild and Reopen in Container` 或是 `Reopen in Container`
+- Step3-1: `cmd` + `shift` + `P` 開啟 VS code 指令介面
 
----
+- Step3-2: 輸入 `Rebuild and Reopen in Container` 或是 `Reopen in Container`，如果看到目前的 VS Code 視窗重新啟動並改為開啟 pinkoi repo，那就代表成功了。
 
-### 連線至開發機
+# 連線至開發環境
 
 [參考資料](https://xenby.com/b/220-%E6%95%99%E5%AD%B8-%E7%94%A2%E7%94%9Fssh-key%E4%B8%A6%E4%B8%94%E9%80%8F%E9%81%8Ekey%E9%80%B2%E8%A1%8C%E5%85%8D%E5%AF%86%E7%A2%BC%E7%99%BB%E5%85%A5)
 
@@ -113,9 +78,3 @@ ssh-keygen
     # 新增公鑰在 ~/.ssh/authorized_keys 檔案內
     echo "your-public-key" >> ~/.ssh/authorized_keys
     ```
-
----
-
-### 使用 CLI 存取開發環境的資料庫
-
-#TODO 
