--- a/Pinkoi/存取資料庫.md
+++ b/Pinkoi/存取資料庫.md
@@ -1,7 +1,21 @@
 # 開發環境篇
 
-### TablePlus
+### 使用 TablePlus
+
+#TODO 
+
+### 使用自己寫的 script
+
+**Step1: **`make tunnel` 連線資料庫
+
+**Step2: **`make shell` 進入設定好 Python 環境的 bash shell
+
+**Step3: ** `cd` 至要執行的 script 檔案的位置
+
+**Step4: ** `python <file-name>.py` 執行檔案
 
 # 正式環境篇
 
 ### TablePlus
+
+#TODO 
