--- a/程式語言理論/程式語言的分類.md
+++ b/程式語言理論/程式語言的分類.md
@@ -35,21 +35,30 @@ x = 123 + "456"  # TypeError: unsupported operand type(s) for +: 'int' and 'str
 
 ### 動態型別
 
-*   Type Checking 發生在 runtime
-*   變數宣告後可以在 runtime 改變其型別
+^0e8504
 
-    ```Python
-    x = 0
-    x = "A"
-    ```
+- Type Checking 發生在 runtime
+- 變數宣告後可以在 runtime 改變其型別
+
+以 Python 為例：
+
+```Python
+x = 0
+x = "A"
+```
+
+*注：Python 雖然在 3.5 開始引入 [[Type Hints]]，但這並未改變它身為動態型別語言的事實。*
 
 ### 靜態型別
 
-*   Type Checking 發生在 compile time
-*   變數宣告後，不能改變其型別
+- 變數宣告後，不能改變其型別
+- Compiled Language 的 type checking 發生在 compile time
+- Interpreted Language 雖然沒有 compile time，但總之是發生在 runtime 之前
+
+以 TypeScript 為例：
 
 ```TypeScript
-let x:number = 0;
+let x: number = 0;
 x = "A";  // Type 'string' is not assignable to type 'number'.
 ```
 
