--- a/Pinkoi/上翻譯的流程.md
+++ b/Pinkoi/上翻譯的流程.md
@@ -6,30 +6,40 @@
 
 對於後端而言，在 `.py` 或 `.mako` 中新增或修改任何 `_("...")` 程式碼，就須要在專案根目錄執行 `make extract-intl`，這個步驟是在建 key，所以完成後會看到一些 `.pot` 檔被改動。
 
-### Step2~6
+這個步驟大概會花 4-5 分鐘 。
+
+### Step2~7
 
 ![[Screenshot 2023-03-23 at 2.14.48 PM.png]]
 
-### Step7: 將最新的 feature branch pull 至 local
+### Step8: 將最新的 feature branch pull 至 local
 
 ```bash
 git pull origin <feature-branch-name>
 ```
 
-### Step8: `make compile-intl`
+此時應該會多一些 `.po` 檔。
 
-此步驟的目的是為了上線前的檢查 ([[#^339948|Step10]]) 做準備，在 local 將翻譯好的內容寫進 `.po` 檔，因此執行完後會看到一些 `.po` 檔被改動，==但是這些 `.po` 檔不用 commit！== 。
+### Step9: `make tunnel`
 
-### Step9: 重啟 local server
+### Step10: `make compile-intl`
+
+此步驟的目的是為了上線前的檢查 ([[#^339948|Step12]]) 做準備，在 local 將翻譯好的內容寫進 `.po` 檔，因此執行完後會看到一些 `.po` 檔被改動，==但是這些 `.po` 檔不用 commit！== 。
+
+這個步驟大概會花 2-3 分鐘 。
+
+### Step11: 重啟 local server
 
 ```bash
 make local-down
 make local-up
 ```
 
-### Step10: 上線前檢查 local 各語言是否皆正常顯示 ^339948
+### Step12: 上線前檢查 local 各語言是否皆正常顯示
 
-### Step11: 進入[[新版本部署至正式環境]]的流程
+^339948
+
+### Step13: 進入[[新版本部署至正式環境]]的流程
 
 # 修改翻譯
 
