--- a/Database/PostgreSQL/零碎筆記.md
+++ b/Database/PostgreSQL/零碎筆記.md
@@ -205,3 +205,11 @@ Output:
 當使用 `IN` operator 時，若左方為 `null`，則無論右方有哪些值，一律 return `null`；或者，若右方的沒有出現任何與左方相同的值，而且有出現過 `null`，則也是 return `null`，不是 return `false`。同樣的規則也適用於 `NOT IN`。
 
 ---
+
+### `UNION`
+
+兩個 relations 若要 `UNION`，則他們的 column 數量必須相同。
+
+`UNION ALL` 與 `UNION` 的差別在於，若前後兩個 relations 擁有一模一樣的 row，則前者會顯示這些重複的 row，後者會把重複出現的 row 剔除。
+
+---
