--- a/Database/零碎筆記.md
+++ b/Database/零碎筆記.md
@@ -1,3 +1,5 @@
-### 關連式資料庫的架構
+### RDBMS 中的巢狀與其他複雜資料型態
 
-![[RDBMS.png]]
+在早期，所有 column 的資料型態都必須是 scalar (atomic)，但後來 RDBMS 漸漸可以支援 array, json 等格式的資料，array, json 也越來越廣泛被使用。
+
+---
