--- a/Pinkoi/上翻譯的流程.md
+++ b/Pinkoi/上翻譯的流程.md
@@ -10,7 +10,7 @@
 
 ### Step2~7
 
-![[Screenshot 2023-03-23 at 2.14.48 PM.png]]
+![[add_translation_workflow_crowdin.png]]
 
 ### Step8: 將最新的 feature branch pull 至 local
 
@@ -43,4 +43,4 @@ make local-up
 
 # 修改翻譯
 
-![[Screenshot 2023-03-23 at 2.15.01 PM.png]]
+![[update_traslation_workflow_crowdin.png]]
