--- a/Python/零碎筆記.md
+++ b/Python/零碎筆記.md
@@ -4,7 +4,7 @@
 
 |   |   |   |   |   |   |   |   |   |   |
 |---|---|---|---|---|---|---|---|---|---|
-|False|True|None|and|as|[[assert]]|break|class|continue|def|
+|False|True|None|and|as|[assert](<# `assert` 的用法>)|break|class|continue|def|
 |del|elif|else|except|finally|for|from|global|if|[[import]]|
 |in|is|lambda|nonlocal|not|or|pass|raise|return|try|
 |while|[[with]]|yield|
@@ -96,6 +96,34 @@ Python module (`.py` 檔) 都有 `__name__` 這個 attribute，當位在 module 
 ---
 
 ### 盡量不要單獨使用 `except:` 或 `except Exception:`，而是具體的 Exception
+
+---
+
+### `assert` 的用法
+
+`assert <expression>, <message>`
+
+其中 `<expression>` 必須 output 一個 `bool`，`<message>` 必須是一個 `str`。
+
+若 `<expression>` output `True`，則程式就會正常地繼續執行；反之，若 `<expression>` output `False`，則程式會中斷並出現錯誤訊息：
+
+```plaintext
+Traceback (most recent call last):
+  File ..., line ...
+    assert <expression>, <message>
+           ^^^^^^^^^^^^
+AssertionError: <message>
+```
+
+執行一個 Python module 時，若加上 `-0` option（比如 `python my_module.py -0`），則 Python Interpreter 會略過所有 `assert` statement。
+
+加上 `-0` option 實際上是把該 module 的 `__debug__` 這個 magic attribute 設為 `False`，因此，我們可以說 `assert <expression>, <message>` 等價於下方程式碼：
+
+```Python
+if __debug__:
+    if not experession:
+        raise AssertionError(message)
+```
 
 ---
 
