--- a/Database/PostgreSQL/零碎筆記.md
+++ b/Database/PostgreSQL/零碎筆記.md
@@ -1,14 +1,22 @@
+### 查詢目前的 Database User
+
+```PostgreSQL
+SELECT current_user;
+```
+
+---
+
 ### 整數相除如何得到完整（包括小數）的結果
 
 須先將分母或分子至少一個化為浮點數。
 
-##### 法一：加 `.0`
+**法一：加 `.0`**
 
 ```PostgreSQL
 select 2.0/5;
 ```
 
-##### 法二：加 `::float`
+**法二：加 `::float`**
 
 ```PostgreSQL
 select count(distinct gender)::float/count(1) from user;
@@ -113,7 +121,7 @@ SELECT DISTINCT [column_a], [column_b], ... FROM [table_a];
 
 回傳目前所有資料中的所有相異的 ([column_a], [column_b], ...) 組合。
 
-##### 範例
+**範例**
 
 ```PostgreSQL
 SELECT COUNT(*) AS distinct_countries
@@ -150,7 +158,7 @@ FROM (SELECT DISTINCT country, city FROM customers) AS subtable;
 | Toyota | 2010 | 70000 |
 | Tesla | 2021 | 100000 |
 
-##### 法一：在 subquery 中使用 `MAX()` 作為篩選條件
+**法一：在 subquery 中使用 `MAX()` 作為篩選條件**
 
 ```PostgreSQL
 SELECT * FROM cars
@@ -167,7 +175,7 @@ Output:
 (2 rows)
 ```
 
-##### 法二：降冪排序後，選擇第一列
+**法二：降冪排序後，選擇第一列**
 
 ```PostgreSQL
 SELECT * FROM cars
