--- a/Database/零碎筆記.md
+++ b/Database/零碎筆記.md
@@ -1,5 +1,13 @@
-### RDBMS 中的巢狀與其他複雜資料型態
+### RDBMS 中的巢狀資料型態與其他複雜資料型態
 
 在早期，所有 column 的資料型態都必須是 scalar (atomic)，但後來 RDBMS 漸漸可以支援 array, json 等格式的資料，array, json 也越來越廣泛被使用。
+
+---
+
+### 資料在 RDBMS 中的順序
+
+我們都說「資料在 RDBMS 中是無序的」，然而這並不代表每次 `SELECT` 資料時所拿到的資料順序都是完全隨機的，因為資料在 Database 中確實是被存在某種資料結構中了，也必定有一個預設用來 traverse 該資料結構的演算法，所以資料的順序應該說是「某種程度上」可預期的，但並非「完全可預期」，因為有一些因素會影響到資料在資料結構中的位置，進而影響到 `SELECT` 時所得到的順序（這些因素包括 DBMS 所採用的 storage engine、單筆資料的大小...... 等）。
+
+你可以把 Database 想像成一包餅乾，靜置時，裡面的餅乾當然有一定的順序，但當你拿著這包餅乾走來走去，有時候手還伸進去拿，或者把餅乾放回去，那這包餅乾的順序難免會不一樣，但也不會說每次觀測時順序都跟上一刻完全不同。
 
 ---
