--- a/Database/PostgreSQL/零碎筆記.md
+++ b/Database/PostgreSQL/零碎筆記.md
@@ -58,25 +58,9 @@ select count(distinct gender)::float/count(1) from user;
 
 ---
 
-### 關鍵字的順序
-
-`SELECT` ... (欄位)
-
-`FROM` ... (表)
-
-`WHERE` ... (comparison of values in target table fields)
-
-`ORDER BY` / `GROUP BY` ... (欄位)
-
-`HAVING` ... (comparison of the results of aggregate functions)
-
----
-
 ### `TRUNCATE` vs. `DELETE`
 
-`TRUNCATE <table_name>` 的效果等同於 `DELETE FROM <table_name>`，都是將指定表內的所有資料刪除（但不刪除 table 的 schema）。
-
-只是 `TRUNCATE` 屬於 DDL (Data Definition Language)；`DELETE` 屬於 DML (Data Manipulation Language)。
+`TRUNCATE <table_name>` 的效果等同於 `DELETE FROM <table_name>`，都是將指定表內的所有資料刪除（但不刪除 table 的 schema）。只是 `TRUNCATE` 被歸類為 [[淺談 SQL#^08460a|DDL]]；`DELETE` 則被歸類為 [[淺談 SQL#^146eea|DML]]。
 
 ---
 
@@ -135,15 +119,6 @@ FROM (SELECT DISTINCT country, city FROM customers) AS subtable;
 
 ---
 
-### String 在不同 SQL 語言中的差別
-
-| **語言** | **字串比對 (column value)** | **引號** |
-| ---- | ---- | ---- |
-| PostgreSQL | 可以比對大小寫| 只能用單引號 |
-| MySQL | ==無法==比對大小寫 | 單雙皆可 |
-
----
-
 ### 選取最大值的方法
 
 範例資料：
@@ -193,12 +168,6 @@ Output:
 ```
 
 你會發現，當最大值有不只一個 row 時，法一會全數列出，法二則只會列出第一筆，因此兩種方法應視需求使用。
-
----
-
-### Wildcard
-
-字串比對時，`%` 代表萬用字元（任意長度、任意字元），`_` 則代表長度為 1 的任意字元。
 
 ---
 
