--- a/Pinkoi/上翻譯的流程.md
+++ b/Pinkoi/上翻譯的流程.md
@@ -44,3 +44,28 @@ make local-up
 # 修改翻譯
 
 ![[update_traslation_workflow_crowdin.png]]
+
+# 當翻譯導致 Branch 與 dev 出現 Conflict 時
+
+### 先在 Local 做以下動作
+
+```bash
+git checkout dev
+git pull origin dev
+
+git checkout <feature_branch>
+git checkout dev locale
+git commit -m "..."
+
+git pull origin dev  # merge branch
+
+make extract-intl
+git add .
+git commit -m "..."
+git push origin <feature_branch>
+```
+
+### 再於 GitHub 做以下動作
+
+- Run crowdin workflow
+- Merge feature branch to dev
