--- a/Python/底線 (_) 的用途.md
+++ b/Python/底線 (_) 的用途.md
@@ -1,4 +1,4 @@
-# Single Underscore
+# 單底線 (`_`)
 
 ### 一、用來儲存不重要的資料
 
@@ -50,7 +50,7 @@ e.g.
 max_ = max(a, b)
 ```
 
-# Double Underscore
+# 雙底線 (`__`)
 
 ### 一、[[Python 中的 OOP#^a80ae0|"類" Private attribute/method]]
 
