--- a/Operating System/Linux/與「搜尋」相關的指令.md
+++ b/Operating System/Linux/與「搜尋」相關的指令.md
@@ -8,7 +8,7 @@ e.g. `which python`
 
 若有多個符合的結果則預設顯示第一個，若要顯示全部則需加上 `-a` option
 
-### 延伸應用
+### 延伸應用一：若搜尋到則直接執行
 
 由於回傳的結果不只是該執行檔所在的 directory，而是包含該執行檔的檔名，因此可以搭配 `eval $(...)` 來直接執行該執行檔：
 
@@ -16,19 +16,36 @@ e.g. `which python`
 eval $(which python)
 ```
 
+### 延伸應用二：顯示執行檔的詳細資訊
+
+```bash
+ls -l $(which python)
+
+# -rwxr-xr-x  1 pinkoi  staff  183 Mar 18 16:18 /Users/pinkoi/python
+```
+
+`which` 指令找到的「可能」只是 symbolic link，可透過 `ls -l` 來確認。
+
 # `whereis` 搜尋一般檔案
 
 Pattern: `whereis [<OPTIONS>] <FILE>`
 
-e.g. `whereis openssl`
+e.g.
+```bash
+whereis openssl
 
-#TODO 
+# openssl: /usr/bin/openssl /usr/share/man/man1/openssl.1
+```
 
 # `find` 以其他條件搜尋
 
 Pattern: `find <PATH> [<OPTION> <VALUE>]`
 
-e.g. `find ~ -name urls.py`, `find / -size +5M`, `find ~/Desktop -type f`
+e.g.
+
+- `find ~ -name urls.py`
+- `find / -size +5M`
+- `find ~/Desktop -type f`
 
 ### Option 為 `-type` 時
 
@@ -37,8 +54,6 @@ Option 為 `-type` 時，value 可以有以下值：
 |Value|`b`|`c`|`d`|`f`|`l`|`p`|`s`|`D`|
 |-|-|-|-|-|-|-|-|-|
 |檔案型態|外接儲存裝置|I/O 裝置|資料夾|一般檔案|捷徑|FIFO|Socket|Door|
-
-#TODO 
 
 # `grep` 搜尋關鍵字
 
