--- a/Operating System/Linux/常用指令與快捷鍵.md
+++ b/Operating System/Linux/常用指令與快捷鍵.md
@@ -67,6 +67,10 @@ ls -l /usr/bin/vim
 
 ### `cp [-r | -f] <OLD> <NEW>`
 
+### `pbcopy < <FILE>`
+
+將指定檔案的內容複製到剪貼簿。這個動作等同於打開檔案後全選檔案內容 (`Command` + `A`)，然後 `Command` + `C`。
+
 ### `rm [<OPTIONS>] <FILE | DIR>`
 
 #TODO 
