--- a/Pinkoi/存取資料庫.md
+++ b/Pinkoi/存取資料庫.md
@@ -1,6 +1,6 @@
 # 開發環境篇
 
-### 使用 TablePlus
+### TablePlus Settings
 
 #TODO 
 
@@ -16,6 +16,6 @@
 
 # 正式環境篇
 
-### TablePlus
+### TablePlus Settings
 
 #TODO 
