--- a/Pinkoi/權限管理.md
+++ b/Pinkoi/權限管理.md
@@ -26,7 +26,7 @@ id2 --> id3
 
 ### 法二：直接改資料庫
 
-**Step1: 到 `rbac_permission` 加上一筆資料**
+**Step1: 使用 Table Plus 或寫 script，在 relation `rbac_permission` 加上一筆資料**
 
 **Step2: 刷新 Cache**
 
