--- a/Web Dev./後端/Django (Python)/如何開始一個專案.md
+++ b/Web Dev./後端/Django (Python)/如何開始一個專案.md
@@ -3,25 +3,84 @@
 ### 安裝最新版本
 
 ```bash
-python3 -m pip install Django
+pip install Django
 ```
 
 ### 已有舊版本，將其更新至最新版
 
 ```bash
-python3 -m pip install -U Django
+pip install -U Django
 ```
 
 ### 確認版本
 
 ```bash
-python3 -m django --version
+django-admin --version
 ```
 
-# 建立一個新專案
+# 使用 CLI 建立一個新專案
 
 ```bash
-django-admin startproject <project-name>
+django-admin startproject <PROJECT_NAME>
 ```
 
-#TODO 
+使用此指令建立的 project 結構如下：
+
+```plaintext
+PROJECT_NAME
+├── PROJECT_NAME
+│   ├── __init__.py
+│   ├── settings.py
+│   ├── asgi.py
+│   └── wsgi.py
+└── manage.py
+```
+
+> [!Note]
+> 關於 Project 底下各個檔案負責做什麼，請見 [[Django 的專案架構#^24b1b9|Django 的專案架構]]。
+
+# 使用 CLI 建立一個 App
+
+> [!Note] 前情提要
+> 關於 App 在一個 Django Project 中的定位，請見 [[Django 的專案架構#Project 底下各個檔案的角色|Django 的專案架構]]。
+
+在「專案根目錄」執行下方指令：
+
+```bash
+python manage.py startapp <APP_NAME>
+```
+
+專案結構會變成下面這樣：
+
+```plaintext
+PROJECT_NAME
+├── PROJECT_NAME
+│   ├── APP_NAME
+│   |   ├── __init__.py
+│   |   ├── admin.py
+│   |   ├── apps.py
+│   |   ├── models.py
+│   |   ├── tests.py
+│   |   ├── views.py
+│   |   └── migrations.py
+│   |       └── __init__.py
+│   ├── __init__.py
+│   ├── settings.py
+│   ├── asgi.py
+│   └── wsgi.py
+└── manage.py
+```
+
+> [!Note]
+> 關於 App 底下各個檔案負責做什麼，請見 [[Django 的專案架構#App (component) 底下各個檔案的角色|Django 的專案架構]]。
+
+# 啟動 Dev 用的 Server
+
+```bash
+python manage.py runserver [<PORT>]
+```
+
+若沒有聲明 `<PORT>`，則預設使用 8000。
+
+> [!Note] 注意
+> 這個 server 只是用來開發用的，不適合用在 production，若要用在 production，還是要用 gunicorn，或者其它類似的套件才行。
