--- a/Operating System/Linux/與網路相關的指令.md
+++ b/Operating System/Linux/與網路相關的指令.md
@@ -1,6 +1,25 @@
 # `ping <HOST>`
 
-# `curl <HOST>`
+`<HOST>` 的部分可以填入 IP 或 domain，但**不可**加上 protocol, url path, port, query string 等額外資訊。
+
+`ping` 使用 ICMP (Internet Control Message Protocol) 來確認目標 IP/domain 是否可以在網路上被找到，因此 ping host 成功只能代表網路的 routing 沒問題，並不代表該 host 可以正常提供服務。
+
+e.g.
+
+```bash
+ping www.google.com
+```
+
+# `curl <URL>`
+
+`curl` 用來送出 request 與接收 response。
+
+`<URL>` 前面可以加上 protocol，也可以不加，但不加就代表使用 `http` protocol，舉例如下：
+
+```bash
+curl www.google.com
+curl https://www.google.com
+```
 
 # 取得 IP Address
 
