--- a/Pinkoi/新版本部署至正式環境.md
+++ b/Pinkoi/新版本部署至正式環境.md
@@ -1,8 +1,29 @@
-通過 Code Review 後，就可以進入 Deploy 的流程了，步驟如下：
+通過 Code Review (LGTM) 後，就可以進入 Deploy 的流程了，步驟如下：
 
-- Step1: 上正式機前的最終測試（至少購物流程要 OK）
-- Step2: Merge your feature branch into `dev` (on GitHub)
-- Step3: `git checkout dev && git pull origin dev`
-- Step4: `git push origin dev:master`（又叫作「發車」）
+### Step1: 最終測試
 
-完成這些步驟後，就會觸發 GitHub 上的 CI，可以在 GitHub Actions 以及 Slack 的 `koi-bus` Channel 裡看到 CI 進度。
+至少此次改動的範圍以及購物流程要 OK。
+
+### Step2: Merge
+
+在 GitHub 上的 pull request 頁面把 feature branch merge 進 `dev` branch。
+
+### Step3
+
+```bash
+git checkout dev
+```
+
+### Step4
+
+```bash
+git pull origin dev
+```
+
+### Step5: 發車
+
+```bash
+git push origin dev:master
+```
+
+完成上述五步驟後，就會觸發 GitHub 上的 CI，可以在 GitHub Actions 以及 Slack 的 `koi-bus` Channel 裡看到 CI 進度。
