--- a/Operating System/Linux/常用指令與快捷鍵.md
+++ b/Operating System/Linux/常用指令與快捷鍵.md
@@ -65,7 +65,14 @@ ls -l /usr/bin/vim
 
 顯示目前所在位置的絕對路徑。
 
-### `cp [-r | -f] <OLD> <NEW>`
+### `cp [<OPTIONS>] <SRC> <DEST>`
+
+將指定檔案或目錄複製到指定位置。
+
+**常用的 Options**
+
+- `-r` 只有在複製目錄時會用到，代表 "recursively"，也就是所有目錄裡的東西都複製
+- `-f` 只有在複製檔案時會用到，代表 "force"，當指定的 `<DEST>` 檔案無法開啟時，就直接將其刪除並把 `<SRC>` 複製過去
 
 ### `pbcopy < <FILE>`
 
@@ -91,9 +98,11 @@ ls -l /usr/bin/vim
 
 ### [[與「搜尋」相關的指令]]
 
-### `chmod <...>`（詳見 [[存取權限與 chmod]]）
+### `chmod`（詳見 [[存取權限與 chmod]]）
 
 ### `exit`
+
+#TODO 
 
 ### `top`
 
@@ -103,23 +112,41 @@ ls -l /usr/bin/vim
 
 ### `unzip <ZIP_FILE>`
 
+#TODO 
+
 ### `echo <STRING>`
+
+#TODO 
 
 ### `cat <FILE>`
 
+#TODO 
+
 ### `kill <PID>|<APP_NAME>`
+
+終止 Process 或應用程式。
 
 ### [[與網路相關的指令]]
 
 ### `history [<OPTIONS>]`
 
-- `history -p`：清除 command 歷史紀錄
+搭配不同 Options 可以達到不同效果，比如：
+
+- `-p`：清除 command 歷史紀錄
 
 ### `shred [<OPTIONS>] <FILE>`
 
+#TODO 
+
 ### `tail [-n <LINE_NUM>] <FILE>`
 
+#TODO 
+
 ### `head [-n <LINE_NUM>] <FILE>`
+
+#TODO 
+
+### `tr`
 
 ### `whoami`
 
@@ -127,7 +154,7 @@ ls -l /usr/bin/vim
 
 ### `uname [-a]`
 
-### `wget`
+#TODO 
 
 ### `sudo <COMMAND>`
 
