--- a/Operating System/Linux/與網路相關的指令.md
+++ b/Operating System/Linux/與網路相關的指令.md
@@ -21,6 +21,10 @@ curl www.google.com
 curl https://www.google.com
 ```
 
+# `wget`
+
+#TODO 
+
 # 取得 IP Address
 
 ### 從 `ifconfig` 找 Local IP
@@ -52,6 +56,12 @@ en0: flags=8863<UP,BROADCAST,SMART,RUNNING,SIMPLEX,MULTICAST> mtu 1500
 
 # `whois <HOST>`
 
+#TODO 
+
 # `traceroute <HOST>`
 
+#TODO 
+
 # `arp`
+
+#TODO 
