--- a/程式語言理論/零碎筆記.md
+++ b/程式語言理論/零碎筆記.md
@@ -1,6 +1,6 @@
 ### 程式語言的演進
 
-![[Screen Shot 2022-05-08 at 3.26.03 PM.png]]
+![[evolution-of-programming-language.png]]
 
 - 第一代程式語言：Machine Language
 
@@ -70,5 +70,25 @@
     
     # ...
     ```
+
+---
+
+### Syntax Error vs. Semantic Error
+
+- **Syntax Error**
+
+    泛指各種不符合該程式語言寫法的錯誤，比如少寫一個 `:`、多一個 `=`、變數名稱以數字開頭… 等，這類的 error 很容易全部被編輯器發現。
+
+- **Semantic Error**
+
+    泛指因程式邏輯錯誤而衍生的錯誤，比如本來預期 function 會回傳 `int`，實際卻回傳 `string`，導致無法進行相除的動作；以 index 取 array 中的元素但 index 超過 array 的長度… 等，這類問題較難完全被編輯器發現，此時就須要開發者自行 debug。
+
+---
+
+### Recursion vs. Iteration
+
+執行 recursive function 時，會有一個 **call stack** 記錄每一次 function call，所以 recursion 所能執行的深度是有限的，call stack 的大小通常會由一個全域變數（[[Recursion Depth 的極限|以 Python 為例]]）所控制，其目的是防止 call stack 佔滿記憶體，當 call stack 被塞滿後就會出現 stack-overflow error，此時便無法繼續往下執行 recursion。
+
+反之，iteration 可執行的次數不會受到記憶體大小限制，所以在不考慮時間的情況下，iteration 可以無限執行下去。
 
 ---
