--- a/Operating System/零碎筆記.md
+++ b/Operating System/零碎筆記.md
@@ -1,8 +1,8 @@
 ### Concurrency vs. Parallelism
 
-若一個時間點執行一個任務，卻在多個任務間快速切換，就可以讓使用者「感覺」多個任務是同時被運行的，此即 Concurrency。
+若一個時間點執行一個任務，卻在多個任務間快速切換，就可以讓使用者「感覺」多個任務是同時被運行的，此即 concurrency，這裡使用的技術是 multi-threading。
 
-必須透過多個 CPU 才能真正達到同時處理多個任務的目的 (Parallelism)。
+必須透過多個 CPU (multi-processing) 才能達到實質意義上的「同時」處理多個任務 (parallelism)。
 
 ![[concurrency and parallelism.jpg]]
 
@@ -19,3 +19,5 @@
 ### 檔案名稱大小寫
 
 在 Linux 中，檔案名稱是 case-sensitive 的，也就是說 `test` 與 `Test` 對系統來說是兩個不同的檔名，可以同時存在在同一個 directory 底下，但在 MacOS 以及 Windows 中，檔案名稱是 case-insensitive 的，所以 `test` 及 `Test`、`TEST`… 等都會被視為相同的檔名，不能同時存在於同一個 directory 底下。
+
+---
