--- a/Network/零碎筆記.md
+++ b/Network/零碎筆記.md
@@ -1,6 +1,6 @@
 ### URL Structure
 
-![[url-structure-url-path.png]]
+![[url-structure-explain.png]]
 
 ---
 
@@ -14,6 +14,6 @@
 
 ### 6 種最常見的 API Architectures
 
-![[1685460729269.jpeg]]
+![[top-6-most-popular-api-architecture-styles.jpeg]]
 
 ---
