--- a/Operating System/Linux/權限管理.md
+++ b/Operating System/Linux/權限管理.md
@@ -1,3 +1,5 @@
+#Command 
+
 # 查看檔案／目錄權限
 
 使用 `ls -l` 可以查看當前 directory 中的所有 files 以及 subdirectory 的詳細資訊，其中就包含權限：
@@ -18,7 +20,7 @@ lrwxr-xr-x@  1 root  wheel    11 Feb  9 17:39 etc -> private/etc
 
 其中每一行的結構如下：
 
-![[Screenshot 2023-04-05 at 12.39.38 PM.png]]
+![[ls-l-output-structure.png]]
 
 ### 常見的 Entry Types
 
@@ -32,7 +34,7 @@ lrwxr-xr-x@  1 root  wheel    11 Feb  9 17:39 etc -> private/etc
 
 針對任何一個 file 或 subdirectory，Linux 皆用九碼的 permission code 來表示所有人對它的存取權限，示意圖如下：
 
-![[Screenshot 2023-04-05 at 2.45.04 PM.png]]
+![[explain-unix-permission-expression.png]]
 
 如上圖所示，九碼 permission code 又可以被切分為三個區段，三個區段分別代表三種不同身份，每個區段的三個 codes 分別代表該身份是否有讀、寫、執行某檔案的權限，若有，則會顯示英文字母 `r`/`w`/`x`，若沒有則會顯示 `-`。
 
