--- a/Operating System/零碎筆記.md
+++ b/Operating System/零碎筆記.md
@@ -1,12 +1,41 @@
 ### Concurrency vs. Parallelism
 
-若一個時間點執行一個任務，卻在多個任務間快速切換，就可以讓使用者「感覺」多個任務是同時被運行的，此即 concurrency，這裡使用的技術是 multi-threading。
+若一個時間點執行一個任務，卻在多個任務間快速切換，就可以讓使用者「感覺」多個任務是同時被運行的，此即 concurrency。Multi-threading 就可以達到 concurrency 的效果。
 
-必須透過多個 CPU (multi-processing) 才能達到實質意義上的「同時」處理多個任務 (parallelism)。
+必須透過 multi-processing（multi-core processor 或 multiprocessor）才能達到實質意義上的「同時」處理多個任務 (parallelism)。
 
 ![[concurrency and parallelism.jpg]]
 
-**Sequential** 既是 Concurrency 的相反詞也是 Parallelism 的相反詞。
+**Sequential** 既是 concurrency 的相反詞也是 parallelism 的相反詞。
+
+---
+
+### Multi-Core Processor vs. Multiprocessor
+
+###### Multi-Core Processor
+
+- 具有多個 cores 的 CPU
+
+###### Multiprocessor
+
+- 一台機器有多個 CPUs，這些 CPU 可能是 single-core 或 multi-core
+- 較 reliable，因為當其中一個 CPU 掛掉時，還有其它的可以用
+- 當多個 CPUs 同時運作時，throughput (吞吐量) 變高
+- 當某個 CPU 正在使用某個 I/O device 時，其他 CPU 就不能使用相同的 I/O device，避免 [[Deadlocks]]
+- OS 較難實作，因為必須處理 processors 之間的溝通
+- 若設計所有 CPUs 共享 memory，則所有 CPU 共用同一個 bus，隨著 bus 越忙，每個 CPU idle 的時間也會變多，這類的 multiprocessor 又叫做 symmetric multiprocessor
+- 若設計每個 CPU 有自己專屬的 memory，則 CPU idle 的時間變少，但每個 CPU 可用的 memory 也變少
+
+| |Multi-Core Processor|Multiprocessor|
+|:-:|:-:|:-:|
+|Parallel Processing|✅|✅|
+|Reliability|較低|👍 較高|
+|同時執行多個 Programs|較慢|👍 較快|
+|Traffic|👍 較低|較高|
+|Configuration|👍 不需要|複雜|
+|Price|👍 較低|較高|
+
+參考資料：<https://www.javatpoint.com/multiprocessor-and-multicore-system-in-operating-system>
 
 ---
 
@@ -27,21 +56,5 @@
 [維基百科](https://en.wikipedia.org/wiki/Thundering_herd_problem)
 
 一個 event 同時觸發很多 threads 或 processes，但因為只有一個 thread 或 process 可以接住這個 event，所以導致所有 threads 與 processes 會為了接住這個 event 而彼此競爭資源，從而導致系統出現 freezing。
-
----
-
-### Multi-Core Processor vs. Multiprocessor
-
-###### Multi-Core Processor
-
-- 具有多個 cores 的 CPU
-
-###### Multiprocessor
-
-- 一台機器有多個 CPUs，這些 CPU 可能是 single-core 或 multi-core
-- 較 reliable，因為當其中一個 CPU 掛掉時，還有其它的可以用
-- OS 較難實作，因為必須處理 processors 之間的溝通
-- 若設計所有 CPUs 共享 memory，則所有 CPU 共用同一個 bus，隨著 bus 越忙，每個 CPU idle 的時間也會變多，這類的 multiprocessor 又叫做 symmetric multiprocessor
-- 若設計每個 CPU 有自己專屬的 memory，則雖然 CPU idle 的時間變少，但每個 CPU 可用的 memory 也變少
 
 ---
