--- a/Operating System/Linux/檔案存取權限.md
+++ b/Operating System/Linux/檔案存取權限.md
@@ -22,14 +22,8 @@ lrwxr-xr-x@  1 root  wheel    11 Feb  9 17:39 etc -> private/etc
 
 ![[ls-l-output-structure.png]]
 
-### 常見的 Entry Types
-
-|Code|Entry Type|
-|:-:|:-:|
-|`-`|一般檔案或執行檔|
-|`d`|Directory|
-|`l`|Soft (Symbolic) Links|
-|`b`|外接儲存裝置（如 USB）|
+>[!Info]
+>本文將著重於 permissions、owner 與 group，並不會介紹 entry type，若想了解 entry type，請見[[File System#檔案的類型|另一篇文章]]。
 
 # 權限的表示方式
 
