--- a/Programming Language/零碎筆記.md
+++ b/Programming Language/零碎筆記.md
@@ -2,17 +2,12 @@
 
 ![[evolution-of-programming-language.png]]
 
-- 第一代程式語言：Machine Language
-
+- 第一代程式語言：Machine language
 - 第二代程式語言：[[Assembly Language (組合語言)]]
-
 - 第三代程式語言：高階程式語言 (Higher-level language)
-
-    e.g. C, C++, Java, Python, Shell Script
-
-- 第四代程式語言：Query Language
-
-    e.g. SQL
+    - e.g. C, C++, Java, Python, [[Shell Script]]
+- 第四代程式語言：Query language
+    - e.g. SQL
 
 ---
 
