--- a/Operating System/Shell/檔案存取權限.md
+++ b/Operating System/Shell/檔案存取權限.md
@@ -13,9 +13,6 @@ drwxr-xr-x@ 10 root  wheel   320 Feb  9 17:39 System
 drwxr-xr-x   5 root  admin   160 Mar 14 16:23 Users
 dr-xr-xr-x   4 root  wheel  4804 Mar 15 11:27 dev
 lrwxr-xr-x@  1 root  wheel    11 Feb  9 17:39 etc -> private/etc
-.
-.
-.
 ```
 
 其中每一行的結構如下：
@@ -23,7 +20,7 @@ lrwxr-xr-x@  1 root  wheel    11 Feb  9 17:39 etc -> private/etc
 ![[ls-l-output-structure.png]]
 
 >[!Info]
->本文將著重於 permissions、owner 與 group，並不會介紹 entry type，若想了解 entry type，請見[[File System#檔案的類型|另一篇文章]]。
+>本文將著重於 permissions、owner 與 group，並不會介紹 entry type，若想了解 entry type，請見[[File System#檔案的類型 (Entry Type)|這篇文章]]。
 
 # 權限的表示方式
 
