--- a/Programming Language/零碎筆記.md
+++ b/Programming Language/零碎筆記.md
@@ -4,8 +4,8 @@
 
 - 第一代程式語言：Machine language
 - 第二代程式語言：[[Assembly Language (組合語言)]]
-- 第三代程式語言：高階程式語言 (Higher-level language)
-    - e.g. C, C++, Java, Python, [[Shell Script (1) - Overview]]
+- 第三代程式語言：高階程式語言 (higher-level language)
+    - e.g. C, C++, Java, Python, [[Shell Script (1) - Overview|Shell Script]]
 - 第四代程式語言：Query language
     - e.g. SQL
 
@@ -88,7 +88,28 @@ a = 10
 
 執行 recursive function 時，會有一個 **call stack** 記錄每一次 function call，所以 recursion 所能執行的深度是有限的，call stack 的大小通常會由一個全域變數（[[Recursion Depth 的極限|以 Python 為例]]）所控制，其目的是防止 call stack 佔滿記憶體，當 call stack 被塞滿後就會出現 stack-overflow error，此時便無法繼續往下執行 recursion。
 
-反之，iteration 可執行的次數不會受到記憶體大小限制，所以在不考慮時間的情況下，iteration 可以無限執行下去。
+反之，iteration 可執行的次數不會受到記憶體大小限制，所以在不考慮時間的情況下，iteration 可以無止盡地執行下去。
+
+---
+
+### Casting vs. Coercing
+
+Casting 指的是人為將變數的型別轉換；coercing 則是指由於程式語言原生的特性而產生的型別轉換。
+
+e.g.
+
+```JavaScript
+const a = "1";
+const b = 1;
+
+// Casting
+const c = Number(a) + b;  // a is explicitly converted to number
+console.log(c);  // 2
+
+// Coercing
+const d = a + b;  // b is automatically (implicitly) conveted to string
+console.log(d);  // 11
+```
 
 ---
 
@@ -103,9 +124,7 @@ Linter 的功能包括：
 
 Formatter 的功能是單純的「排版」，常見的 formatter 如 prettier 與 black (for Python)。
 
----
-
-### Java
+# Java
 
 ![[java-concept-map.pdf]]
 
