--- a/Programming Language/零碎筆記.md
+++ b/Programming Language/零碎筆記.md
@@ -3,9 +3,9 @@
 ![[evolution-of-programming-language.png]]
 
 - 第一代程式語言：Machine language
-- 第二代程式語言：[[Assembly Language (組合語言)]]
+- 第二代程式語言：[[Assembly Language]]
 - 第三代程式語言：高階程式語言 (higher-level language)
-    - e.g. C, C++, Java, Python, [[Shell Script (1) - Overview|Shell Script]]
+    - e.g. C, C++, Java, Python, [[L2 - Overview of Shell Script|Shell Script]]
 - 第四代程式語言：Query language
     - e.g. SQL
 
