--- a/Network/檔案傳輸.md
+++ b/Network/檔案傳輸.md
@@ -1,15 +1,15 @@
-講到檔案傳輸或許大家心裡第一個冒出的名詞就是 FTP，FTP 確實是專門用來傳送檔案的網路協定，但其實除了它之外還有很多協定都可以用來傳輸檔案，比如我們每天都在用的 HTTP/HTTPS，還有 SSH 世界中的 SCP。
+講到檔案傳輸或許大家心裡第一個冒出的名詞就是 FTP，FTP 確實是專門用來傳送檔案的網路協定，但其實除了它之外，還有很多協定都可以用來傳輸檔案，比如我們每天都在用的 HTTP/HTTPS，還有 SSH 世界中的 SCP。
 
 # FTP
 
 FTP 是 File Transfer Protocol 的縮寫，是專門用來傳送檔案的 [[The OSI Model#Application Layer (Layer 7)|application layer protocol]]。雖說使用 HTTP/HTTPS 也可以傳送檔案，但當要傳送的檔案很大時，FTP 會比較快。
 
-FTP 使用的 port 是 21，其使用的 Transport Layer (L4) 以及 Network Layer (L3) 則是 TCP/IP，因為 L4 用的是 [[TCP]] 不是 UDP，所以可以確保資料完整性。
+FTP 使用 port 21，其使用的 Transport Layer (L4) 以及 Network Layer (L3) 則是 TCP/IP，因為 L4 用的是 [[TCP]] 不是 UDP，所以可以確保資料完整性。
 
 常見的使用 FTP 下載檔案的方法有二：
 
 1. 使用網頁瀏覽器
-2. 使用專用的 FTP Client（常見者如 FileZilla）
+2. 使用專用的 FTP Client（比如 FileZilla）
 
 ### 使用 Chrome 透過 FTP 下載檔案
 
@@ -17,11 +17,11 @@ FTP 使用的 port 是 21，其使用的 Transport Layer (L4) 以及 Network Lay
 
 ### 使用 FileZilla 透過 FTP 下載及上傳檔案
 
-輸入 host IP address/domain, username, password 以及 port 後即可連線。
+輸入 host IP address/domain、username、password 以及 port 後即可連線。
 
 透過拖曳的方式上傳或下載檔案。
 
-如同 HTTP，如果結尾沒有 "S" 就代表資料是以明文在傳輸的，這意味著 FTP 不適合在 public network 使用，但在 FileZilla 上可以選擇是否使用加密的管道，加密的管道包括稍後會提及的 SFTP 與 FTPS。
+如同 HTTP，如果結尾沒有 "S" 就代表資料是以明文傳輸，所以 FTP 不適合在 public network 使用。在 FileZilla 上可以選擇是否使用加密的管道，加密的管道包括稍後會提及的 SFTP 與 FTPS。
 
 # SFTP
 
@@ -31,19 +31,19 @@ SFTP 與 FTP 的差別在於，SFTP 傳輸的內容會先在 source 被加密，
 
 ### SFTP vs. FTPS
 
-FTPS 之於 FTP，就有如 HTTPS 之餘 HTTP，也就是說，FTPS 就是使用 [[SSL & TLS|SSL/TLS]] 加密通道的 FTP，不過這也意味著要使用 FTPS 就要向 CA (Certificate Authority) 申請（購買）憑證，並且設定你的 FTP Server 去使用該憑證。
+FTPS 之於 FTP，就有如 HTTPS 之餘 HTTP，也就是說，FTPS 就是使用 [[SSL & TLS|SSL/TLS]] 加密通道的 FTP，不過這也意味著要使用 FTPS 就要向 CA (certificate authority) 申請／購買憑證，並且設定你的 FTP server 去使用該憑證。
 
 ![[FTPS-vs.-SFTP-1.png]]
 
 # SCP
 
-SCP 是 Secure Copy Protocol 的縮寫，它是 SSH 內建的功能，因此使用 SCP 的前置作業相對較其它 protocol 少，只要 server 與 client 都有安裝 OpenSSH 就可以使用（通常 OS 裡都會安裝 OpenSSH）。
+SCP 是 Secure Copy Protocol 的縮寫，它是 SSH 內建的功能，因此使用 SCP 的前置作業相對較其它 protocol 少，只要 server 與 client 可以用 SSH 連線，就可以使用 SCP。
 
 由於 SCP 是 SSH 內建的功能，因此它使用 port 與 SSH 同樣是 port 22。
 
 一般而言，SCP 傳送檔案的速度會明顯地較其他 protocol 快，因為 SCP 的設計相對簡單（但它沒有因此犧牲安全性）。
 
-通常是使用 CLI 來完成 SCP 檔案傳輸，指令是 `scp`。使用 `scp` 前，不需要特別先使用 `ssh` 指令連線，因為連線指令已經包在 `scp` 裡面了，`scp` 的 command pattern 與 `cp` 類似：
+通常是使用指令來進行 SCP 檔案傳輸，指令是 `scp`。使用 `scp` 前，不需要特別先使用 `ssh` 指令連線，因為連線指令已經包在 `scp` 裡面了，`scp` 的 command pattern 與 `cp` 類似：
 
 ```sh
 scp [<OPTION>] [[<USER>@]<SRC_IP>:]<PATH_TO_FILE> [[<USER>@]<DEST_IP>:]<PATH_TO_FILE>
