--- a/Operating System/零碎筆記.md
+++ b/Operating System/零碎筆記.md
@@ -8,7 +8,7 @@
 
 必須透過 multi-processing（multi-core processor 或 multiprocessor）才能達到實質意義上的「同時」處理多個任務 (parallelism)。
 
-![[concurrency and parallelism.jpg]]
+![[concurrency-vs-parallelism.jpg]]
 
 **Sequential** 既是 concurrency 的相反詞也是 parallelism 的相反詞。
 
