--- a/Database/PostgreSQL/資料型態.md
+++ b/Database/PostgreSQL/資料型態.md
@@ -28,6 +28,29 @@
 |`uuid`||universally unique identifier|
 |`xml`||XML data|
 
-### 相關文章
+### `CHAR(n)` vs. `VARCHAR(n)` vs. `TEXT`
+
+| Data Type | Description |
+|---|---|
+| `CHARACTER VARYING(n)`, `VARCHAR(n)` | variable-length with length limit |
+| `CHARACTER(n)`, `CHAR(n)` | fixed-length, ==blank padded== |
+| `TEXT`, `VARCHAR` | variable unlimited length |
+
+### 自定義資料型態
+
+舉例：
+
+```SQL
+CREATE TYPE gender_type AS ENUM ('M', 'F');
+```
+
+將 column `gender` 的資料型態改成自定義的型態 `gender_type`：
+
+```SQL
+ALTER TABLE customer
+ALTER COLUMN gender TYPE gender_type USING gender::gender_type;
+```
+
+# 其它相關文章
 
 - [[numeric vs real vs double precision]]
