--- a/Programming Language/零碎筆記.md
+++ b/Programming Language/零碎筆記.md
@@ -19,19 +19,19 @@
 
 ---
 
-### Arguments vs. Parameters
+### Parameters vs. Arguments
+
+- **Parameter (參數)**
+
+    定義一個 method 或 function 時所要求的。
+
+    A parameter is the variable which is part of the method's signature (method declaration).
 
 - **Argument (引數)**
 
     呼叫 method 或 function 時，實際填入的值。
 
     An argument is an [[#Expression vs. Statement|expression]] used when calling the method.
-
-- **Parameter (參數)**
-
-    定義一個 method 或 function 時所要求的。
-
-    A parameter is the variable which is part of the method’s signature (method declaration).
 
 ---
 
