--- a/Network/檔案傳輸.md
+++ b/Network/檔案傳輸.md
@@ -2,7 +2,7 @@
 
 # FTP
 
-FTP 是 File Transfer Protocol 的縮寫，是專門用來傳送檔案的 [[The OSI Model#Application Layer (Layer 7)|application layer protocol]]。雖說使用 HTTP/HTTPS 也可以傳送檔案，但當要傳送的檔案很大時，FTP 會比較快。
+FTP 是 File Transfer Protocol 的縮寫，是專門用來傳送檔案的 [[OSI Model#Application Layer (Layer 7)|application layer protocol]]。雖說使用 HTTP/HTTPS 也可以傳送檔案，但當要傳送的檔案很大時，FTP 會比較快。
 
 FTP 使用 port 21，其使用的 Transport Layer (L4) 以及 Network Layer (L3) 則是 TCP/IP，因為 L4 用的是 [[TCP]] 不是 UDP，所以可以確保資料完整性。
 
