--- a/Web Development/訪問網站時發生了哪些事.md
+++ b/Web Development/訪問網站時發生了哪些事.md
@@ -30,17 +30,22 @@ e.g.
 
 # 步驟四：DNS Lookup
 
->[!Note]
->關於 DNS 以及 DNS lookup 的詳細運作機制，請見[[DNS.canvas|本文]]
-
 當你輸入的 URL 是 domain name 不是 IP address 時，瀏覽器會依照以下順序查詢 IP address：
 
-- 瀏覽器自己維護的 domain-name ↔ IP address map
-- OS 維護的 hosts 檔案（MacOS 與 Linux 都是放在 /etc/hosts）
-- 
+- 先找瀏覽器自己維護的 domain-name ↔ IP address map
+- 如果瀏覽器沒有紀錄，就==由 OS 幫我們==去 OS 維護的 hosts file 找（MacOS 與 Linux 都是放在 /etc/hosts）
+- 如果 OS 也沒有紀錄，OS 會繼續幫我們去問 internet 中離我們最近的 local DNS server
+- 如果 local DNS server 還是沒有紀錄，會接著去其他更高層級的 DNS server 找答案
 
 >[!Info]
 >在 Google Chrome 中，搜尋 `chrome://net-internals/#dns` 就可以查詢／管理目前這個瀏覽器的 domain-name ↔ IP address map。
+
+>[!Note]
+>關於 DNS 以及 internet 中 DNS lookup 的詳細運作機制，請見[[DNS.canvas|本文]]
+
+# 步驟五：ARP Process
+
+#TODO 
 
 # 參考資料
 
