--- a/Web Development/訪問網站時發生了哪些事.md
+++ b/Web Development/訪問網站時發生了哪些事.md
@@ -41,7 +41,7 @@ e.g.
 >在 Google Chrome 中，搜尋 `chrome://net-internals/#dns` 就可以查詢／管理目前這個瀏覽器的 domain-name ↔ IP address map。
 
 >[!Note]
->關於 DNS 以及 internet 中 DNS lookup 的詳細運作機制，請見[[DNS.canvas|本文]]
+>關於 DNS 以及 internet 中 DNS lookup 的詳細運作機制，請見[[DNS|本文]]。
 
 # 步驟五：ARP Process
 
