--- a/Web Development/訪問網站時發生了哪些事.md
+++ b/Web Development/訪問網站時發生了哪些事.md
@@ -1,28 +1,30 @@
 這是一道常見的面試問題：「從你在瀏覽器中輸入網址訪問一個網站，到看到網頁呈現在眼前，這段期間發生了哪些事？」
 
-下面是以「在 Google Chrome 中搜尋 `https://www.google.com`」為例的範例：
-
 # 步驟一：辨認是否為 URL
 
 如果是的話就會訪問該網站；否則就會進入搜尋模式（將文字丟給搜尋引擎）。
 
 一個基本的 URL 要有：
 
-- scheme (protocol)
+- Scheme (protocol)
 - `://`
-- domain name (or IP address)
+- Host name（可以是 domain name 或 IP address）
 
 >[!Note]
 >關於 URL 的詳細結構，請見[[System Design 101#URL vs. URI vs. URN|本文]]。
 
-有些瀏覽器可以支援只輸入 domain name (or IP address) 並自動幫你加上 `http://`，比如 Chrome。
-# 步驟二：轉換 Non-ASCII 字元
+有些瀏覽器（比如 Google Chrome）可以支援只輸入 domain name (or IP address) 並自動幫你加上 `http://`。
+# 步驟二：URL Percent Encoding
 
-如果你輸入的是 URL，則瀏覽器會進一步將每個 non-ASCII 的字元轉換為「16 進制表示的 UTF-8 byte sequences」並在每個 sequence 前加上一個 `%`
+如果你輸入的是 URL，則瀏覽器會進一步將每個 non-ASCII 的字元轉換為「16 進制表示的 UTF-8 byte sequences」並在每個 sequence 前加上一個 `%`。
 
 e.g.
 
-`https://www.google.com/search?q=你好` → `https://www.google.com/search?q=%E4%BD%A0%E5%A5%BD`
+- Before encoding: `https://www.google.com/search?q=你好`
+- After encoding: `https://www.google.com/search?q=%E4%BD%A0%E5%A5%BD`
+
+>[!Note]
+>完整的 encoding rule 請見[維基百科](https://en.wikipedia.org/wiki/Percent-encoding)。
 
 # 步驟三：Check HSTS List
 
