--- a/Operating System/Shell/與網路相關的指令.md
+++ b/Operating System/Shell/與網路相關的指令.md
@@ -23,13 +23,13 @@ en0: flags=8863<UP,BROADCAST,SMART,RUNNING,SIMPLEX,MULTICAST> mtu 1500
     status: active
 ```
 
-### `ipconfig getifaddr en0` 取得 Local IP Address
+### 用 `ipconfig getifaddr en0` 取得 Local IP Address
 
 - 是 `ipconfig`，不是 `ifconfig`
 - 這個指令會直接 output 一行 local IP address
 - 如果輸入 `en0` 發現沒有 output，就換 `en1`
 
-### `curl ifconfig.me` 取得 Public IP Address
+### 用 `curl ifconfig.me` 取得 Public IP Address
 
 如果你所連到的網路在 [[NAT]] 底下，那就必須從外部才能知道自己的 public IP address，因此這裡要使用 `curl` 發 request 到 `https://ifconfig.me` 這個外部網站，取得自己的 public IP address 後 stdout。
 
@@ -212,4 +212,14 @@ destination: default
 
 # `arp`
 
-#TODO 
+### 查詢本機的 ARP Table
+
+```bash
+arp -a
+```
+
+Example output:
+
+```plaintext
+router.asus.com (192.168.50.1) at 24:4b:fe:35:13:7c on en0 ifscope [ethernet]
+```
