--- a/Programming Language/Python/底線的用途.md
+++ b/Programming Language/Python/底線的用途.md
@@ -2,7 +2,7 @@
 
 ### 一、用來儲存不重要的資料
 
-比如進行 [[Programming Language/Python/零碎筆記#Tuple Unpacking|tuple unpacking]] 時，若其中有些不重要的資料，你可以這麼做：
+比如進行 [[Sequence Unpacking]] 時，若其中有些不重要的資料，你可以這麼做：
 
 ```Python
 year, *_, second = (2020, 7, 10, 12, 10, 59)
@@ -52,7 +52,7 @@ max_ = max(a, b)
 
 # 雙底線 (`__`)
 
-### 一、[[Python 中的 OOP (1)#"類" Private attribute/method|"類" Private attribute/method]]
+### 一、[[OOP in Python (1)#"類" Private attribute/method|"類" Private attribute/method]]
 
 在 attribute/method 的開頭使用雙底線。
 
@@ -60,7 +60,7 @@ e.g. `__age`
 
 ### 二、Magic Names
 
-會在 attribute 或 method 的開頭與結尾都出現雙底線，又叫 dunder names (double-underscore names)。
+會在 attribute 或 method 的開頭與結尾都出現雙底線，又叫 dunder names (double-underscore names)，詳見 [[Magic Method & Magic Attribute]]。
 
 e.g. `__name__`
 
