--- a/Programming Language/零碎筆記.md
+++ b/Programming Language/零碎筆記.md
@@ -86,7 +86,7 @@ a = 10
 
 ### Recursion vs. Iteration
 
-執行 recursive function 時，會有一個 **call stack** 記錄每一次 function call，所以 recursion 所能執行的深度是有限的，call stack 的大小通常會由一個全域變數（[[Recursion Depth 的極限|以 Python 為例]]）所控制，其目的是防止 call stack 佔滿記憶體，當 call stack 被塞滿後就會出現 stack-overflow error，此時便無法繼續往下執行 recursion。
+執行 recursive function 時，會有一個 **call stack** 記錄每一次 function call，所以 recursion 所能執行的深度是有限的，call stack 的大小通常會由一個全域變數（[[Recursion Depth Limit|以 Python 為例]]）所控制，其目的是防止 call stack 佔滿記憶體，當 call stack 被塞滿後就會出現 stack-overflow error，此時便無法繼續往下執行 recursion。
 
 反之，iteration 可執行的次數不會受到記憶體大小限制，所以在不考慮時間的情況下，iteration 可以無止盡地執行下去。
 
