--- a/Web Development/訪問網站時發生了哪些事.md
+++ b/Web Development/訪問網站時發生了哪些事.md
@@ -45,9 +45,13 @@ e.g.
 >[!Note]
 >關於 DNS 以及 internet 中 DNS lookup 的詳細運作機制，請見[[DNS|本文]]。
 
-# 步驟五：ARP Process
+# 步驟五：ARP Lookup
 
 #TODO 
+
+# 步驟六：Network Routing
+
+# 步驟七：Server Respond
 
 # 參考資料
 
